--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,32 @@
 </head>
 
 <body>
-    <h1>nihao</h1>
+    <input type="file" name="img" id="file">
+    <img src="" alt="" id="img">
+    <button>上传</button>
+    <script>
+        let btn = document.getElementsByTagName('button')[0];
+        let file = document.getElementById('file');
+        btn.onclick = () => {
+            console.log(file.files)
+            let formData = new FormData();
+            formData.append('img', file.files[0]);
+            fetch('/api/upload', {
+                method: "post",
+                body: formData
+            }).then(resp => resp.json()).then(resp => {
+                console.log(resp)
+            })
+        }
+        file.onchange = (e) => {
+            console.log(e.target.files)
+            let newFile = new FileReader(e.target.files[0])
+            newFile.onload = () => {
+                img.src = newFile.result;
+            }
+            newFile.readAsDataURL(e.target.files[0])
+        }
+    </script>
 </body>
 
 </html>
