--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-    <input type="file" name="img" id="file">
-    <img src="" alt="" id="img">
-    <button>上传</button>
-    <script>
-        let btn = document.getElementsByTagName('button')[0];
-        let file = document.getElementById('file');
-        btn.onclick = () => {
-            console.log(file.files)
-            let formData = new FormData();
-            formData.append('img', file.files[0]);
-            fetch('/api/upload', {
-                method: "post",
-                body: formData
-            }).then(resp => resp.json()).then(resp => {
-                console.log(resp)
-            })
-        }
-        file.onchange = (e) => {
-            console.log(e.target.files)
-            let newFile = new FileReader(e.target.files[0])
-            newFile.onload = () => {
-                img.src = newFile.result;
-            }
-            newFile.readAsDataURL(e.target.files[0])
-        }
-    </script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>client</title><link href=/css/about.f25df6b1.css rel=prefetch><link href=/css/chunk-17aebbe8.12bd11a2.css rel=prefetch><link href=/css/chunk-49e672b6.ab395662.css rel=prefetch><link href=/js/about.171af687.js rel=prefetch><link href=/js/chunk-17aebbe8.af058ecc.js rel=prefetch><link href=/js/chunk-49e672b6.a9a3f78c.js rel=prefetch><link href=/css/index.6471352e.css rel=preload as=style><link href=/js/chunk-vendors.a606061f.js rel=preload as=script><link href=/js/index.13a7fb9e.js rel=preload as=script><link href=/css/index.6471352e.css rel=stylesheet></head><body><noscript><strong>We're sorry but client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.a606061f.js></script><script src=/js/index.13a7fb9e.js></script></body></html>
